<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AdamWest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="drawer_open">DrawerOpen</string>
    <string name="drawer_close">DrawerClose</string>
    <string name="action">Action</string>
    <string name="delete">Löschen</string>
    <string name="edit">Bearbeiten</string>
    //MENU    <string name="menu_picture">Foto</string>
    <string name="menu_video">Video</string>
    <string name="menu_description">Beschreibung</string>
    <string name="menu_delete_route">Strecke löschen</string>
    <string name="menu_edit_route">Strecken-Infomationen bearbeiten</string>
    <string name="menu_show_attachments">Mediafiles anzeigen</string>
    <string name="menu_edit_event">Bearbeiten</string>
    <string name="menu_delete_event">Löschen</string>
    //TABS    <string name="tab_detail">Detail</string>
    <string name="tab_routes">Strecken</string>
    <string name="tab_events">Events</string>
    <string name="tab_map">Karte</string>
    <string name="holiday_list_header">Eingetragene Urlaube</string>
    <string name="add_new_holiday">Neues Abenteuer starten...</string>
    <string name="no_entries">Keine Einträge vorhanden</string>
    <string name="insert_holiday_name">Urlaubsziel/Namen eingeben</string>
    <string name="insert_holiday_description">Beschreibung(optional)</string>
    <string name="abort">Abbrechen</string>
    <string name="create_new_holiday">Neuen Urlaub/Ausflug erzeugen</string>
    <string name="create_new_route">Neue Strecke starten</string>
    <string name="set_route_as_active">Strecke als aktive Strecke wählen</string>
    <string name="show_route_overview">Strecke zeigen</string>
    <string name="route_createt_at">Strecke gestartet am: </string>
    <string name="cancel">Abbrechen</string>
    <string name="save">Speichern</string>
    <string name="add_attachment">Anhang hinzufügen</string>
    <string name="description_optional">Beschreibung (optional)</string>
    <string name="event_name_optinal">Evenname (optional)</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="event_nearby_title">Event vorhanden</string>
    <string name="event_nearby_text_1">Sie haben bereits ein Event in ihrer unmittelbaren Nähe erzeugt</string>
    <string name="event_nearby_text_2">. Möchten Sie dieses verwenden, oder ein neues erzeugen?</string>
    <string name="unnamed">Unbenannt</string>
    <string name="old_event">Alt</string>
    <string name="new_event">Neu</string>
    <string name="amount_of_routes">Anzahl der Strecken:</string>
    <string name="distance_made">Zurückgelegte Distanz:</string>
    <string name="amount_of_pictures">Anzahl Fotos:</string>
    <string name="amount_of_videos">Anzahl Videos:</string>
    <string name="amount_of_text">Anzahl Texte:</string>
    <string name="distance_scale_unit">m</string>
    <string name="confirm_delete">Löschen bestätigen</string>
    <string name="confirm_holiday_delete_text">"Soll dieser Urlaub wirklich gelöscht werden?</string>
    <string name="confirm_event_delete_text">"Soll dieses Event wirklich gelöscht werden?</string>
    <string name="confirm_route_delete_text">"Soll diese Strecke wirklich gelöscht werden?</string>
    <string name="description">Beschreibung:</string>
    <string name="started_at">Begonnen:</string>
    <string name="finished_at">Beendet:</string>
    <string name="picture_count">Bilder:</string>
    <string name="video_count">Videos:</string>
    <string name="text_count">Texte:</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="other_holidays">Sonstige</string>

    //prompts
    <string name="prompt_new_route_title">Neue Route</string>
    <string name="prompt_new_route_create">Erstellen</string>
    <string name="prompt_new_route_cancel">Abbrechen</string>
    <string name="prompt_new_route_hint_title">Routen Name</string>
    <string name="prompt_new_route_hint_description">Beschreibung...</string>


</resources>
