<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@android:color/holo_green_light"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <EditText
            android:id="@+id/edit_text_holiday_name"
            android:layout_marginTop="10dp"
            android:hint="@string/insert_holiday_name"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:layout_height="wrap_content"/>

    <EditText
            android:id="@+id/edit_text_holiday_description"
            android:hint="@string/insert_holiday_description"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:lines="10"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/button_abort"
            android:text="@string/abort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/button_submit"
            android:layout_marginTop="10dp"
            android:text="@string/create_new_holiday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</LinearLayout>