<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@android:color/holo_red_dark"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <EditText
            android:id="@+id/edit_text_event_name"
            android:hint="@string/event_name_optinal"
            android:layout_width="match_parent"
            android:layout_alignParentTop="true"
            android:layout_height="wrap_content"/>
    <LinearLayout
            android:id="@+id/layout_button"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <Button
                android:id="@+id/button_cancel"
                android:text="@string/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <Button
                android:id="@+id/button_accept"
                android:layout_width="wrap_content"
                android:text="@string/save"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <EditText
            android:id="@+id/edit_text_description"
            android:hint="@string/menu_description"
            android:layout_width="match_parent"
            android:background="@android:color/holo_green_light"
            android:layout_above="@id/layout_button"
            android:layout_below="@id/edit_text_event_name"
            android:layout_height="match_parent"/>
</RelativeLayout>