<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@android:color/holo_red_dark"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <EditText
            android:id="@+id/edit_text_event_name"
            android:hint="@string/event_name_optinal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <ImageView
            android:id="@+id/imageview_preview"
            android:background="@color/common_signin_btn_light_text_disabled"
            android:src="@drawable/ic_action_edit"
            android:layout_width="wrap_content"
            android:layout_height="200dp"/>

    <VideoView
            android:id="@+id/videoview"
            android:visibility="gone"
            android:layout_width="fill_parent"
            android:layout_height="200dp" />

    <EditText
            android:id="@+id/edit_text_media_description"
            android:hint="@string/description_optional"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <Button
                android:id="@+id/button_cancel"
                android:text="@string/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <Button
                android:id="@+id/button_accept"
                android:layout_width="wrap_content"
                android:text="@string/save"
                android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>