<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                tools:context="de.adamwest.activities_fragments.holiday_detail.HolidayDetailActivity"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:background="@color/black_with_opacity"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
            android:padding="5dp"
            android:id="@+id/prompt_new_route_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black_with_opacity"
            android:text="@string/prompt_new_route_title"
            android:gravity="center"
            android:textColor="@color/grey_light"
            android:textSize="@dimen/prompt_title_textsize"/>

    <LinearLayout
            android:id="@+id/prompt_new_route_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black_with_opacity"
            android:padding="5dp"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true">

        <Button
                android:id="@+id/prompt_new_route_create"
                android:layout_margin="5dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/prompt_new_route_create"
                android:textColor="@color/grey_light"
                android:textSize="@dimen/prompt_button_textsize"
                android:background="@drawable/simple_button_selector_dark"/>

        <Button
                android:id="@+id/prompt_new_route_cancel"
                android:layout_margin="5dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/prompt_new_route_cancel"
                android:textColor="@color/grey_light"
                android:textSize="@dimen/prompt_button_textsize"
                android:background="@drawable/simple_button_selector_dark"/>

    </LinearLayout>

    <LinearLayout
            android:layout_below="@id/prompt_new_route_title"
            android:layout_above="@id/prompt_new_route_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <EditText
                android:id="@+id/prompt_new_route_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/grey_light"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/prompt_description_textsize"
                android:hint="@string/prompt_new_route_hint_title"/>

        <EditText
                android:id="@+id/prompt_new_route_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="top"
                android:textColor="@color/grey_light"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/prompt_description_textsize"
                android:hint="@string/prompt_new_route_hint_description"/>

    </LinearLayout>

</RelativeLayout>