<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@drawable/route_list_item_selector"
              android:layout_width="match_parent"
              android:padding="@dimen/listview_padding"
              android:layout_height="wrap_content">

    <TextView
            android:id="@+id/text_view_route_name"
            android:text="TestRoute"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/text_view_route_description"
            android:layout_marginTop="5dp"
            android:textStyle="italic"
            android:text="Test beschreibung blalalalala fdifjdifjdfjkd Test beschreibung blalalalala fdifjdifjdfjkd Test beschreibung blalalalala fdifjdifjdfjkd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <LinearLayout
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/started_at"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:text="@string/finished_at"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
                android:layout_marginLeft="5dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/text_view_started_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:id="@+id/text_view_finished_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/text_view_distance"
                android:layout_alignParentLeft="true"
                android:text="@string/distance_made"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"/>

        <TextView
                android:id="@+id/text_view_distance_counter"
                android:layout_toRightOf="@id/text_view_distance"
                android:paddingLeft="5dp"
                android:paddingRight="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </RelativeLayout>

    <LinearLayout
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/text_view_amount_of_pictures"
                android:layout_weight="1"
                android:text="Bilder: 10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"/>
        <TextView
                android:id="@+id/text_view_amount_of_videos"
                android:layout_weight="1"
                android:text="Videos: 0"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/text_view_amount_of_text"
                android:layout_weight="1"
                android:text="Texte: 10"
                android:gravity="right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
     </LinearLayout>
</LinearLayout>